Fix text clipping on small devices

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -449,6 +449,9 @@ section h3.section-subheading {
       right:0px;
       text-align: right;
     }
+    #portfolio .portfolio-item .portfolio-caption {
+        max-width: 40%;
+    }
 }
 
 .timeline {
